# skeleton

backend/: acorn.cabal
backend/docs/: async.puml
backend/include/: Acorn.h
backend/src/: All.agda  AppState.agda  Interaction.agda  Logic.agda  Main.hs  TestMain.hs
backend/src/Test/: ExampleTest.agda
backend/src/Test/Haskell/: ExampleTest.agda
frontend/include/ViewModel/: AsyncCapable.hpp  HsAppStateWrapper.hpp
frontend/src/Test/: ViewModelTest.cpp  main.cpp
frontend/src/ViewModel/: AsyncCapable.cpp  HsAppStateWrapper.cpp
